Apply audit fixes and polish frontend/admin flows